<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DISHTAG</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="a1">USERNAME</string>
        <string name="a2">PASSWORD</string>
        <string name="a3">New profile</string>
        <string name="a31">LOGIN</string>
        <string name="a31a1">LOGIN-RE</string>
        <string name="a4">I\'M A DISHTAGGER</string>
                <string name="a5">I\'M A RESTAURANT</string>
                <string name="a6">EMAIL</string>
                <string name="a7">RE-ENTER EMAIL</string>
                <string name="a8">NEW PASSWORD</string>
                <string name="a9">RE-ENTER PASSWORD</string>
                <string name="a10">BIRTHDAY</string>
                <string name="a11">FEMALE</string>
              <string name="a12">MALE</string>
              <string name="a13">READY TO DISHTAG!</string>
              <string name="a14">保存</string>
              <string name="a15">tag the dish</string>
              <string name="a151">dish category</string>
              <string name="a16">write a caption</string>
              <string name="a16a">dishname</string>
              <string name="a17">TAG FRIENDS</string>
              <string name="a18">TAG RESTAURANT</string>
         <string name="a19">RESTAURANT NAME</string>
         <string name="a20">BRANCH</string>
         <string name="a21">EMAIL</string>
         <string name="a22">RE-ENTER EMAIL</string>
         <string name="a23">NEW PASSWORD</string>
         <string name="a24">RE-ENTER PASSWORD</string>
         <string name="a25">GET DISHTAGGED</string>
         <string name="a26">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
         <string name="a27">ADAM RILEY</string>
         <string name="a28">SOPPRESSATA PICCANTE</string>
         <string name="a281">]</string>
         <string name="a29">\@MOTORINO</string>
         <string name="a30">with Raffaela Bichiri and 3 other</string>
         <string name="a31a">TOMATO SAUCE/ RCE DI LATTE/SPICY SOPPRESSATA/FRESHCHIES/GARUC/OREGANO/PEOCRNO/EV.OLIVE OL </string>
         <string name="a32">158 HKD</string>
         <string name="a33">posted on date - time</string>
         <string name="a34">3</string>
         <string name="a35">14</string>
         <string name="a36">ROAST CHICKEN</string>
         <string name="a37">\@DJIBOUTII</string>
         <string name="a38">MARINATED IN LEMON,GARLIC AND SPICES</string>
         <string name="a39">1/4 $75</string>
         <string name="a40">1/2 $140</string>
<string name="a41">VIEW MENU</string>
<string name="a42">ADAM\'S INFO</string>
<string name="a43">LOCATION:</string>
<string name="a44">HONG KONG</string>
<string name="a45">FOOD RELATIONSHIP STATUS:</string>
<string name="a46">BURGER JUNKIE</string>
<string name="a47">NUMBER OF DISHTAGS:</string>
<string name="a48">4</string>
<string name="a49">MOST POPULAR DISHTAGS</string>
<string name="a50">DISHTAG PLACES</string>
<string name="a51">PLACE NAME</string>
<string name="a51a">left a comment on your dishtag @MOTORINO</string>
<string name="a51b">"GREAT PHOTO!"</string>
<string name="a52">FRIENDS</string>
<string name="a53">FRIENDS NAME</string>
<string name="a54">FAV RESTAURANTS</string>
<string name="a55">DISHTAGGIN\' ACTIVITY</string>
<string name="a56">started following you</string>
<string name="a57">EXPLORE ...</string>
<string name="a58">DISHTAGS RECOMMENDED FOR YOU</string>
<string name="a59">CHEESEBURGER</string>
<string name="a60">] DISHTAGS</string>
<string name="a61">] DISHTAGGERS</string>
<string name="a62">PLACES</string>
<string name="a63">DJIBOUTLL\'S DISHTAGS</string>
<string name="a64">FILTERS</string>
<string name="a65">TAG FRIENDS</string>
<string name="a65a">DISH DETAILS</string>
<string name="a66">RAFFAELLA BICHIRI</string>
<string name="a67">TAG RESTAURANT</string>
<string name="a67a">PRICE</string>
<string name="a68">MOTORINO</string>
<string name="a69">SHARE...</string>
<string name="a70">FOLLOWERS</string>
<string name="a71">FOLLOWING</string>
<string name="a72">DJIBOUTLL\'S INFO</string>
<string name="a73">RESTAURANT TYPE:</string>
<string name="a731">COCKTALL BAR AND TAPAS</string>
<string name="a74">ADDRESS: view map</string>
<string name="a75">G/F,2 LANDALE STWAN CHAI,HONG KONG</string>
<string name="a76">OPENING HOURS:</string>
<string name="a77">MON-SUN 12PM-11PM</string>
<string name="a78">CONTACTS:</string>
<string name="a79">INFO@DJIBOUTLL.COM +85294559998</string>
<string name="a80">RESERVATIONS:</string>
<string name="a81">TAKES RESERVATIONS</string>
<string name="a82">MOST DISHTAGGED</string>
<string name="a83">DISHTAGGIN\' ACTIVITY</string>
<string name="a84">STARTERS</string>
<string name="a85">MAINS</string>
<string name="a86">DESSERTS</string>
<string name="a87">DRINKS</string>
<string name="a88">Selection date Please</string>
<string name="a89">Sure</string>
<string name="a90">PLEASE ENTER EMAIL</string>
<string name="a90a">PLEASE ENTER RESTAURANT NAME</string>
<string name="a91">PLEASE ENTER EMAIL</string>
<string name="a92">TWO INPUT EMAIL DIFFERENT</string>
<string name="a93">TWO INPUT PASSWORD DIFFERENT</string>
<string name="a94">PLEASE ENTER RE-EMAIL</string>
<string name="a95">PLEASE ENTER NEW PASSWORD</string>
<string name="a951">PLEASE ENTER PASSWORD</string>
<string name="a951a">PLEASE ENTER A CORRECT EMAIL ADDRESS</string>
<string name="a96">PLEASE ENTER RE-ENTER PASSWORD</string>
<string name="a97">PLEASE ENTER BIRTHDAY</string>
<string name="a98">PLEASE ENTER BRANCE</string>
<string name="a99"></string>
        <string name="toast">And then press an exit procedure</string>
              <string name="a101">REVISE</string>
              <string name="a102">SURE</string>
              <string name="a103">PLEASE WRITE A CAPTION</string>
              <string name="a103a">PLEASE WRITE DISH DETAILS</string>
              <string name="a104">Picture being loaded</string>
              <string name="a105">Press once to exit the program</string>
              <string name="a106">ADAM RILEY</string>
              <string name="a106a">DJBOUTLL</string>
              <string name="a107">Send</string>
              <string name="a108">Upload fail</string>
              <string name="a109">uploading...</string>
              <string name="a110">Sharing</string>
              <string name="a111"> You’re one step away from Dishtag, please verify  your email address through the link that has been sent to your inbox!</string>
                           <string name="a112">Please enter at least 6 passwords</string>
              
</resources>
