      <ScrollView 
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:fillViewport="true"
          xmlns:android="http://schemas.android.com/apk/res/android">
      <LinearLayout 
          
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <Button 
                        android:layout_width="wrap_content"
                        
                    android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/mBtnRegister"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_gravity="right"
                    android:layout_height="38dp"
            android:background="@drawable/button1"
            android:text="@string/a101"
            />
                 <TextView 
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/a42"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/mTIvt41ha1"
                android:textColor="@color/black"
                android:textSize="@dimen/smallc"
                />
                 <TextView 
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/a43"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/mTIvt41ha2"
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallc"
                />
          <EditText 
                            android:focusableInTouchMode="false"
              
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/a44"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/mTIvt41ha3"
                android:textColor="@color/black"
                android:textSize="@dimen/smallc"
                />
                 
                         <TextView 
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/a45"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/mTIvt41ha4"
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallc"
                />
                                  <EditText 
                android:focusableInTouchMode="false"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/a46"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/mTIvt41ha5"
                android:textColor="@color/black"
                android:textSize="@dimen/smallc"
                />
                 <RelativeLayout 
                     android:layout_width="fill_parent"
                                     android:layout_marginTop="18dp"
                                     android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                     
                     android:layout_height="wrap_content"
                     >
                     <RelativeLayout 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         >
                <TextView 
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/a47"
                android:id="@+id/mTIvt41ha6"
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallc"
                />
                <EditText 
                                  android:focusableInTouchMode="false"
                    
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/a48"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/mTIvt41ha6"
                android:id="@+id/mTIvt41ha7"
                android:textColor="@color/black"
                android:numeric="integer"
                android:textSize="@dimen/smallc"
                /></RelativeLayout>
                
                     
                 </RelativeLayout>
                      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:text="@string/a26"
        android:textColor="@color/black"
        />
                 <TextView 
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/a49"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/mTIvt41ha8"
                android:textColor="@color/black"
                android:textSize="@dimen/smallc"
                />
               <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"    
                                    android:layout_marginLeft="10dp"
        
            >
        <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a36"
                android:id="@+id/mTIvt41h"
                android:textColor="@color/black"
                android:textSize="@dimen/smallb"
                />
        <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a37"
                            android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/mTIvt41h"
                android:id="@+id/mTvww1"
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallb"
                />
        </RelativeLayout>
                        <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="300dp"    
        
            >
        <ImageView 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/mTIvt41l"
                android:scaleType="fitXY"
                android:src="@drawable/t18"
                />
        </RelativeLayout>
       
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            >
        <TextView 
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/a31a"
                android:id="@+id/mTIvt41q"
                            android:layout_marginTop="18dp"
                
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallb"
                />
        
        <RelativeLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                >
                <ImageView 
                    android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                    android:src="@drawable/t10"
                    android:layout_alignParentRight="true"
                    android:id="@+id/mTIvt41n"
                    />
                              <TextView 
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/a35"
                android:id="@+id/mTIvt41o"
                android:layout_toLeftOf="@id/mTIvt41n"
                android:textColor="@color/black"
                android:textSize="@dimen/smallb"
                />
                                <ImageView 
                    android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                    android:src="@drawable/t9"
                    android:id="@+id/mTIvt41n1"
                                    android:layout_toLeftOf="@id/mTIvt41o"
                    
                    />
                              <TextView 
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/a34"
                android:id="@+id/mTIvt41o1"
                android:layout_toLeftOf="@id/mTIvt41n1"
                android:textColor="@color/black"
                android:textSize="@dimen/smallb"
                />
                        </RelativeLayout>
        </LinearLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a32"
                android:id="@+id/mTIvt41r"
                android:layout_alignParentLeft="true"
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallb"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a33"
                android:layout_alignParentRight="true"
                android:id="@+id/mTIvt41o1a"
                android:textColor="@color/aamy1"
                android:textSize="@dimen/smallb"
                />
        </RelativeLayout>
        
        </LinearLayout>    
</ScrollView>
